--- a/public/coffee/standalone.html
+++ b/public/coffee/standalone.html
@@ -129,10 +129,10 @@
                                 <span>email@website.com</span>
                             </div>
                             <ul class="social-icons-simple">
-                                <li><a class="facebook-text-hvr" href="javascript:void(0)"><i class="fab fa-facebook-f"></i> </a> </li>
-                                <li><a class="twitter-text-hvr" href="javascript:void(0)"><i class="fab fa-twitter"></i> </a> </li>
+                                <li><a class="facebook-text-hvr" href="javascript:void(0)"><i class="lni lni-facebook-filled"></i> </a> </li>
+                                <li><a class="twitter-text-hvr" href="javascript:void(0)"><i class="lni lni-twitter-filled"></i> </a> </li>
                                 <li><a class="youtube-text-hvr" href="javascript:void(0)"><i class="fab fa-youtube"></i> </a> </li>
-                                <li><a class="instagram-text-hvr" href="javascript:void(0)"><i class="fab fa-instagram"></i> </a> </li>
+                                <li><a class="instagram-text-hvr" href="javascript:void(0)"><i class="lni lni-instagram"></i> </a> </li>
                             </ul>
                             <p class="text-white">&copy; 2020 MegaOne. Made With Love by Themesindustry</p>
                         </div>
@@ -292,11 +292,11 @@
             <div class="col-12 text-center">
                 <div class="footer-social">
                     <ul class="list-unstyled social-icons social-icons-simple">
-                        <li><a class="social-icon wow fadeInUp" href="javascript:void(0)"><i class="fab fa-facebook-f" aria-hidden="true"></i> </a> </li>
-                        <li><a class="social-icon wow fadeInDown" href="javascript:void(0)"><i class="fab fa-twitter" aria-hidden="true"></i> </a> </li>
+                        <li><a class="social-icon wow fadeInUp" href="javascript:void(0)"><i class="lni lni-facebook-filled" aria-hidden="true"></i> </a> </li>
+                        <li><a class="social-icon wow fadeInDown" href="javascript:void(0)"><i class="lni lni-twitter-filled" aria-hidden="true"></i> </a> </li>
                         <li><a class="social-icon wow fadeInUp" href="javascript:void(0)"><i class="fab fa-google-plus-g" aria-hidden="true"></i> </a> </li>
-                        <li><a class="social-icon wow fadeInDown" href="javascript:void(0)"><i class="fab fa-linkedin-in" aria-hidden="true"></i> </a> </li>
-                        <li><a class="social-icon wow fadeInUp" href="javascript:void(0)"><i class="fab fa-instagram" aria-hidden="true"></i> </a> </li>
+                        <li><a class="social-icon wow fadeInDown" href="javascript:void(0)"><i class="lni lni-linkedin" aria-hidden="true"></i> </a> </li>
+                        <li><a class="social-icon wow fadeInUp" href="javascript:void(0)"><i class="lni lni-instagram" aria-hidden="true"></i> </a> </li>
                         <li><a class="social-icon wow fadeInUp" href="javascript:void(0)"><i class="fab fa-pinterest-p" aria-hidden="true"></i> </a> </li>
                     </ul>
                 </div>
