--- a/public/index-food.html
+++ b/public/index-food.html
@@ -89,10 +89,10 @@
             </div>
             <div class="social_icons">
                 <ul>
-                    <li><a href="#." class="facebook-bg-hvr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a> </li>
-                    <li><a href="#." class="twitter-bg-hvr"><i class="fab fa-twitter" aria-hidden="true"></i></a> </li>
-                    <li><a href="#." class="linkedin-bg-hvr"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a> </li>
-                    <li><a href="#." class="instagram-bg-hvr"><i class="fab fa-instagram" aria-hidden="true"></i></a> </li>
+                    <li><a href="#." class="facebook-bg-hvr"><i class="lni lni-facebook-filled" aria-hidden="true"></i></a> </li>
+                    <li><a href="#." class="twitter-bg-hvr"><i class="lni lni-twitter-filled" aria-hidden="true"></i></a> </li>
+                    <li><a href="#." class="linkedin-bg-hvr"><i class="lni lni-linkedin" aria-hidden="true"></i></a> </li>
+                    <li><a href="#." class="instagram-bg-hvr"><i class="lni lni-instagram" aria-hidden="true"></i></a> </li>
                 </ul>
             </div>
 
@@ -135,10 +135,10 @@
 
             <div class="side-footer text-white w-100">
                 <ul class="social-icons-simple">
-                    <li class="side-menu-icons"><a href="javascript:void(0)" class="facebook-bg-hvr"><i class="fab fa-facebook-f color-white"></i> </a> </li>
-                    <li class="side-menu-icons"><a href="javascript:void(0)" class="twitter-bg-hvr"><i class="fab fa-twitter color-white"></i> </a> </li>
-                    <li class="side-menu-icons"><a href="javascript:void(0)" class="linkedin-bg-hvr"><i class="fab fa-linkedin-in color-white"></i> </a> </li>
-                    <li class="side-menu-icons"><a href="javascript:void(0)" class="instagram-bg-hvr"><i class="fab fa-instagram color-white"></i> </a> </li>
+                    <li class="side-menu-icons"><a href="javascript:void(0)" class="facebook-bg-hvr"><i class="lni lni-facebook-filled color-white"></i> </a> </li>
+                    <li class="side-menu-icons"><a href="javascript:void(0)" class="twitter-bg-hvr"><i class="lni lni-twitter-filled color-white"></i> </a> </li>
+                    <li class="side-menu-icons"><a href="javascript:void(0)" class="linkedin-bg-hvr"><i class="lni lni-linkedin color-white"></i> </a> </li>
+                    <li class="side-menu-icons"><a href="javascript:void(0)" class="instagram-bg-hvr"><i class="lni lni-instagram color-white"></i> </a> </li>
 
                 </ul>
                 <p class="text-white">&copy; 2020 MegaOne. Made With Love by Themesindustry</p>
@@ -1584,10 +1584,10 @@
                     <div class="footer-para">
                         <div class="contact-social-icon pb-20">
                             <ul class="social-icons mb-0">
-                                <li><a href="#." class="facebook-bg-hvr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a> </li>
-                                <li><a href="#." class="twitter-bg-hvr"><i class="fab fa-twitter" aria-hidden="true"></i></a> </li>
-                                <li><a href="#." class="linkedin-bg-hvr"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a> </li>
-                                <li><a href="#." class="instagram-bg-hvr"><i class="fab fa-instagram" aria-hidden="true"></i></a> </li>
+                                <li><a href="#." class="facebook-bg-hvr"><i class="lni lni-facebook-filled" aria-hidden="true"></i></a> </li>
+                                <li><a href="#." class="twitter-bg-hvr"><i class="lni lni-twitter-filled" aria-hidden="true"></i></a> </li>
+                                <li><a href="#." class="linkedin-bg-hvr"><i class="lni lni-linkedin" aria-hidden="true"></i></a> </li>
+                                <li><a href="#." class="instagram-bg-hvr"><i class="lni lni-instagram" aria-hidden="true"></i></a> </li>
                             </ul>
                         </div>
                         <p class="copyright-para">© 2019 MegaOne. Made With Love By <a href="javascript:void(0);" class="grey"> Themesindustry</a></p>
@@ -1599,7 +1599,7 @@
     <!--End Footer-->
 
     <!--G0 Top-->
-    <div class="go-top"><i class="fas fa-chevron-up"></i><i class="fas fa-chevron-up"></i></div>
+    <div class="go-top"><i class="lni lni-angle-double-up"></i><i class="lni lni-angle-double-up"></i></div>
     <!--End Go Top-->
 
 </div>
