--- a/public/food/blog-detail.html
+++ b/public/food/blog-detail.html
@@ -80,10 +80,10 @@
                 </div>
                 <div class="social_icons d-none d-md-block">
                     <ul>
-                        <li><a href="#." class="facebook-bg-hvr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a> </li>
-                        <li><a href="#." class="twitter-bg-hvr"><i class="fab fa-twitter" aria-hidden="true"></i></a> </li>
-                        <li><a href="#." class="linkedin-bg-hvr"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a> </li>
-                        <li><a href="#." class="instagram-bg-hvr"><i class="fab fa-instagram" aria-hidden="true"></i></a> </li>
+                        <li><a href="#." class="facebook-bg-hvr"><i class="lni lni-facebook-filled" aria-hidden="true"></i></a> </li>
+                        <li><a href="#." class="twitter-bg-hvr"><i class="lni lni-twitter-filled" aria-hidden="true"></i></a> </li>
+                        <li><a href="#." class="linkedin-bg-hvr"><i class="lni lni-linkedin" aria-hidden="true"></i></a> </li>
+                        <li><a href="#." class="instagram-bg-hvr"><i class="lni lni-instagram" aria-hidden="true"></i></a> </li>
                     </ul>
                 </div>
 
@@ -126,10 +126,10 @@
 
                 <div class="side-footer text-white w-100">
                     <ul class="social-icons-simple">
-                        <li class="side-menu-icons"><a href="javascript:void(0)" class="facebook-bg-hvr"><i class="fab fa-facebook-f color-white"></i> </a> </li>
-                        <li class="side-menu-icons"><a href="javascript:void(0)" class="twitter-bg-hvr"><i class="fab fa-twitter color-white"></i> </a> </li>
-                        <li class="side-menu-icons"><a href="javascript:void(0)" class="linkedin-bg-hvr"><i class="fab fa-linkedin-in color-white"></i> </a> </li>
-                        <li class="side-menu-icons"><a href="javascript:void(0)" class="instagram-bg-hvr"><i class="fab fa-instagram color-white"></i> </a> </li>
+                        <li class="side-menu-icons"><a href="javascript:void(0)" class="facebook-bg-hvr"><i class="lni lni-facebook-filled color-white"></i> </a> </li>
+                        <li class="side-menu-icons"><a href="javascript:void(0)" class="twitter-bg-hvr"><i class="lni lni-twitter-filled color-white"></i> </a> </li>
+                        <li class="side-menu-icons"><a href="javascript:void(0)" class="linkedin-bg-hvr"><i class="lni lni-linkedin color-white"></i> </a> </li>
+                        <li class="side-menu-icons"><a href="javascript:void(0)" class="instagram-bg-hvr"><i class="lni lni-instagram color-white"></i> </a> </li>
 
                     </ul>
                     <p class="text-white">&copy; 2019 MegaOne. Made With Love by Themesindustry</p>
@@ -222,10 +222,10 @@
                         <strong class="d-inline-block align-middle mb-2">Share:</strong>
                         <div class="contact-social-icon pb-10">
                             <ul class="social-icons mb-0">
-                                <li><a href="#." class="facebook-bg-hvr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a> </li>
-                                <li><a href="#." class="twitter-bg-hvr"><i class="fab fa-twitter" aria-hidden="true"></i></a> </li>
-                                <li><a href="#." class="linkedin-bg-hvr"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a> </li>
-                                <li><a href="#." class="instagram-bg-hvr"><i class="fab fa-instagram" aria-hidden="true"></i></a> </li>
+                                <li><a href="#." class="facebook-bg-hvr"><i class="lni lni-facebook-filled" aria-hidden="true"></i></a> </li>
+                                <li><a href="#." class="twitter-bg-hvr"><i class="lni lni-twitter-filled" aria-hidden="true"></i></a> </li>
+                                <li><a href="#." class="linkedin-bg-hvr"><i class="lni lni-linkedin" aria-hidden="true"></i></a> </li>
+                                <li><a href="#." class="instagram-bg-hvr"><i class="lni lni-instagram" aria-hidden="true"></i></a> </li>
                             </ul>
                         </div>
                     </div>
@@ -381,10 +381,10 @@
                     <div class="footer-para">
                         <div class="contact-social-icon pb-10">
                             <ul class="social-icons mb-0">
-                                <li><a href="#." class="facebook-bg-hvr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a> </li>
-                                <li><a href="#." class="twitter-bg-hvr"><i class="fab fa-twitter" aria-hidden="true"></i></a> </li>
-                                <li><a href="#." class="linkedin-bg-hvr"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a> </li>
-                                <li><a href="#." class="instagram-bg-hvr"><i class="fab fa-instagram" aria-hidden="true"></i></a> </li>
+                                <li><a href="#." class="facebook-bg-hvr"><i class="lni lni-facebook-filled" aria-hidden="true"></i></a> </li>
+                                <li><a href="#." class="twitter-bg-hvr"><i class="lni lni-twitter-filled" aria-hidden="true"></i></a> </li>
+                                <li><a href="#." class="linkedin-bg-hvr"><i class="lni lni-linkedin" aria-hidden="true"></i></a> </li>
+                                <li><a href="#." class="instagram-bg-hvr"><i class="lni lni-instagram" aria-hidden="true"></i></a> </li>
                             </ul>
                         </div>
                         <p class="copyright-para">© 2019 MegaOne. Made With Love By <a href="javascript:void(0);" class="grey"> Themesindustry</a></p>
@@ -396,7 +396,7 @@
     <!--End Footer-->
 
     <!--G0 Top-->
-    <div class="go-top"><i class="fas fa-chevron-up"></i><i class="fas fa-chevron-up"></i></div>
+    <div class="go-top"><i class="lni lni-angle-double-up"></i><i class="lni lni-angle-double-up"></i></div>
     <!--End Go Top-->
 
 
